# oasis-racing-game

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  oasis  readme.md
.github/workflows/: build.yml  linux.yml  mac.yml  windows.yml
racing-game/: CMakeLists.txt  game.json  manifest.json  oasis
racing-game/assets/: car.svdag
racing-game/include/: game_api.hpp
racing-game/src/: main.cpp
